@@ -137,7 +137,6 @@ def build(fastflix: FastFlix):
         f"--avsync {vsync_setting}",
         (f"--interlace {video.interlaced}" if video.interlaced and video.interlaced != "False" else ""),
         ("--vpp-yadif" if video.video_settings.deinterlace else ""),
-        (f"--vpp-colorspace hdr2sdr=mobius" if video.video_settings.remove_hdr else ""),
         remove_hdr,
         ("--adapt-ref" if settings.adapt_ref else ""),
         ("--adapt-ltr" if settings.adapt_ltr else ""),
