@@ -4,6 +4,7 @@
 
 * Fixing #598 'dict' object has no attribute 'to_yaml' (thanks to dmo marillat)
 * Fixing #599 Italian language translations (thanks to bovirus)
+* Fixing #605 HDR2SDR double tonemapping in Rigaya NVENC and QSV Encoders (thanks to Darksyderz)
 
 ## Version 5.8.0
 
